# Kasa

./: .gitignore  .gitmodules  Cargo.toml  Justfile  bun.lockb  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
kasa_ai/: Cargo.toml
kasa_ai/src/: lib.rs  wdv_tagger.rs
kasa_bench/: Cargo.toml
kasa_bench/benches/: google_images_layout.rs
kasa_cli_utils/: .gitignore  Cargo.toml
kasa_cli_utils/py/: .gitignore  get_cats_dogs_dataset.py
kasa_cli_utils/src/: ai_tag_images.rs  dump_random_gi_layout.rs  gdl.rs  index_all_ai_images.rs  index_folder.rs  main.rs  nuke_db_versioning.rs  populate_tags.rs  thumbnail.rs
kasa_core/: .gitignore  Cargo.toml  build.rs
kasa_core/src/: ai_tagger.rs  groups.rs  lib.rs  media.rs  supported_formats.rs  tags.rs  xxhash.rs
kasa_core/src/ai_slop/: a1111.rs  comfy.rs  errors.rs  indexers.rs  mod.rs  prompt_parser.rs  supported_formats.rs
kasa_core/src/ai_slop/test_assets/: a1111_meta_expected_jpeg.json  comfy_meta_expected.json
kasa_core/src/config/: global_config.rs  mod.rs  schema.rs
kasa_core/src/db/: db.rs  db_info.rs  migrations.rs  mod.rs  schema.rs  tags.rs
kasa_core/src/downloaders/: gallery_dl.rs  mod.rs  server.rs
kasa_core/src/index/: index_image.rs  index_sources.rs  indexer.rs  indexer_first.rs  indexer_second.rs  media_types.rs  mod.rs  thumbnail_sizes.rs  write_to_db.rs
kasa_core/src/index/postprocess/: ai_indexer.rs  file_path_indexer.rs  mod.rs
kasa_core/src/layout/: README.md  google_photos.rs
kasa_core/src/linux/: get_desktop.rs  mod.rs
kasa_core/src/os/: mod.rs
kasa_core/src/tags/: mod.rs  presets.rs  search.rs  tags.rs
kasa_core/src/test_util/: db_utils.rs
kasa_core/src/thumbnail/: get_thumbnail.rs  mod.rs  thumbnail_flash.rs  thumbnail_group.rs  thumbnail_image.rs  thumbnail_video.rs  thumbnailer.rs
kasa_ffmpeg/: Cargo.toml
kasa_gpui/: Cargo.toml
kasa_gpui/src/: async_body.rs  http_client.rs  main.rs  requests.rs  tokio.rs
kasa_python/: .gitignore  Cargo.toml  Justfile  build.rs
kasa_python/py/dependencies/certifi/certifi/: __init__.py
kasa_python/py/patches/: add_output_paths.diff  fix_broken_multibytecodec_import.diff
kasa_python/py/py_src/: gdl.py  kasa_download_job.py
kasa_python/src/: lib.rs
kasa_python/src/extractors/: configurable.rs  danbooru.rs  mod.rs
kasa_tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
kasa_tauri/capabilities/: csd.json  migrated.json  multiwindow.json  theme.json
kasa_tauri/icons/: icon.icns
kasa_tauri/src/: config.rs  db.rs  downloaders.rs  file_picker.rs  image.rs  index.rs  lib.rs  linux.rs  media.rs  media_server.rs  search.rs  serve_media.rs_  tags.rs  utils.rs
migrations/db/: 0_create.sql  20240606120724_create.sql
migrations/thumbs/: 0_create.sql
src/: app.css  app.d.ts  colors.css  fonts.css
src/component/Decoration/: DecorationStore.svelte.ts  MainPageTitlebarInsides.svelte  README.md  WindowControls.svelte  WindowTitlebar.svelte  index.ts
src/component/Decoration/components/: Button.svelte  LayoutMenu.d.ts  LayoutMenu.svelte
src/component/Decoration/controls/: MacOs.svelte  Windows.svelte
src/component/Decoration/utils/: os.ts  window.ts
src/component/Downloader/: Downloader.svelte
src/component/IndexMenu/: IndexMenu.svelte
src/component/InfiniteMedia/: Image.svelte  InfiniteMedia.d.ts  InfiniteMediaGP.svelte  InfiniteMediaStore.svelte.ts  Masonry.svelte  MediaThumbnail.svelte
src/component/MediaModal/: ImportInfo.svelte  MediaModal.d.ts  MediaModal.svelte  MediaModalStatusStore.svelte.ts  Sidebar.svelte  SidebarFooter.d.ts  SidebarFooter.svelte  TagDisplay.d.ts  TagDisplay.svelte  TagDropDown.d.ts  TagDropDown.svelte
src/component/MediaModal/Tags/: NewTag.svelte  Tag.d.ts  Tag.svelte  TagDisplay.d.ts  TagDisplay.svelte  TagDisplay.ts  TagDropDown.d.ts  TagPicker.d.ts  TagPicker.svelte
src/component/Settings/: Settings.d.ts  Settings.svelte  Settings.ts  SettingsSidebar.svelte
src/component/Settings/Screens/: Database.svelte  Downloaders.svelte  Thumbnails.svelte
src/component/Settings/Shared/: Button.d.ts  Button.svelte  ConfirmationDialog.svelte  ConfirmationDialogStore.svelte.ts  PathInput.d.ts  PathInput.svelte  Title.svelte
src/component/Settings/Sidebar/: SettingsSidebar.d.ts  SettingsSidebar.svelte  SidebarEntry.d.ts  SidebarEntry.svelte
src/component/Shared/: BorderedBox.d.ts  BorderedBox.svelte  Checkbox.svelte  CheckboxProps.d.ts
src/component/Shared/Dividers/: DividerSizes.ts  HorizontalDivider.d.ts  HorizontalDivider.svelte  VerticalDivider.d.ts  VerticalDivider.svelte
src/component/Sidebar/: Bottom.svelte  Categories.svelte  Collections.svelte  Operations.svelte  ResizeBar.svelte  SettingsButton.svelte  SideBarGlobals.scss  Sidebar.svelte  SidebarButton.d.ts  SidebarButton.svelte  SidebarStore.svelte.ts
src/component/Sidebar/Search/: HandleSelect.ts  Search.svelte  SearchBarTestEntries.ts  SearchDropDown.d.ts  SearchDropDown.svelte  SearchDropDownEntry.d.ts  SearchDropDownEntry.svelte  (+1 more)
src/component/Vector/: ArrowUpRightFromSquare.svelte  Bars.svelte  Clipboard.svelte  Cross.svelte  CrossFilled.svelte  Database.svelte  Download.svelte  FileManager.svelte  FilterAltOff.svelte  FolderOpen.svelte  Gamepad.svelte  Gear.svelte  Heart.svelte  Image.svelte  LoupePlus.svelte  LoupeWithHeart.svelte  MagnifyingGlass.svelte  Moon.svelte  Pen.svelte  SearchFolder.svelte  SearchHardrive.svelte  SidebarIcon.svelte  Swf.svelte  Tick.svelte  Trash.svelte  TrashGnome.svelte  TrashWithQuestionMark.svelte  UserTrash.svelte  Vector.d.ts  Video.svelte  VideoReel.svelte  X.svelte
src/lib/: clickOutside.js  clickOutside.ts  colorUtils.ts  disableRightClickMenu.ts  getCaretPos.ts  isNumbericString.ts  openFilePicker.ts  serve.ts  sleep.ts  tauri_bindings.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/downloader/: +page.svelte
src/routes/index_menu/: +page.svelte
src/routes/modal/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/swf_test/: +page.svelte
static/: .gitignore
(+19 files in other folders)
