[workspace]
members = [
    "kasa_core",
    "kasa_cli_utils",
    "kasa_tauri",
    "kasa_bench",
]
default-members = []
resolver = "2"
#panic = "abort"   # Strip expensive panic clean-up logic
#codegen-units = 1 # Compile crates one after another so the compiler can optimize better
#lto = true        # Enables link to optimizations
#opt-level = "s"   # Optimize for binary size
