[workspace]
resolver = "2"

# some rust projects there, cargo doesn't like that

exclude = ["py_build"]

members = [
    "kasa_core",
    "kasa_cli_utils",
    "kasa_tauri",
    "kasa_bench",
    "kasa_python",
]

[workspace.package]

#default-members = []
#panic = "abort"   # Strip expensive panic clean-up logic
#codegen-units = 1 # Compile crates one after another so the compiler can optimize better
#lto = true        # Enables link to optimizations
#opt-level = "s"   # Optimize for binary size

[workspace.dependencies]
kasa_python = { path = "./kasa_python" }
