[workspace]
resolver = "2"
edition = "2024"


# some rust projects there, cargo doesn't like that

exclude = ["py_build"]

members = [
    "kasa_core",
    "kasa_cli_utils",
    "kasa_tauri",
    "kasa_bench",
    "kasa_python",
    # "kasa_gtk_experiment",
]

[workspace.package]

#default-members = []
#panic = "abort"   # Strip expensive panic clean-up logic
#codegen-units = 1 # Compile crates one after another so the compiler can optimize better
#lto = true        # Enables link to optimizations
#opt-level = "s"   # Optimize for binary size

[workspace.dependencies]
kasa_python = { path = "./kasa_python" }
anyhow = "1.0.91"
async-walkdir = "2.0.0"
axum = "0.7.5"
axum-macros = "0.4.2"
base64 = "0.22.1"
chrono = "0.4.38"
clap = "4.5.23"
criterion = "0.5.1"
crossbeam-channel = "0.5.12"
csv = "1.3.0"
diffy = "0.4.0"
image = { version = "0.25.1", features = ["avif-native"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
env_logger = "0.11.5"
fast_image_resize = "4.0.0"
ffmpeg = { git = "https://github.com/zmwangx/rust-ffmpeg" }
flate2 = "1.0.34"
human_bytes = { version = "0.4.3", default-features = false }
humantime = "2.1.0"
imagesize = "0.12.0"
img-parts = "0.3.0"
indexmap = "2.5.0"
itertools = "0.13.0"
kamadak-exif = "0.5.5"
log = "0.4.22"
memchr = "2.7.4"
mime_guess = "2.0.4"
nom = "7.1.3"
num_cpus = "1.16.0"
os_info = "3.8.2"
pest = "2.7.11"
rand = "0.8.5"
rayon = "1.9.0"
regex = "1.10.5"
reqwest = "0.12.9"
rustpython = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa", features = [
    "ssl",
] }
rustpython-pylib = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa" }
rustpython-stdlib = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa", features = [
    "ssl",
] }
rustpython-vm = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa" }
serde = "1.0.213"
serde_json = "1.0.132"
serde_with = "3.8.1"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
sqlx = "0.8.2"
strum = "0.26.3"
tar = "0.4.43"
tauri = "2.1.1"
tauri-build = "2.0.3"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-specta = "=2.0.0-rc.20"
tempfile = "3.12.0"
thiserror = "1.0.65"
tokio = "1.38.0"
tokio-stream = "0.1.16"
toml = "0.8.19"
toml_edit = "0.22.20"
tower-http = "0.5.2"
walkdir = { git = "https://github.com/dbarnett/walkdir/", branch = "lifetimes" }
xxhash-rust = "0.8.10"
xz = "0.1.0"

# Breaking minor version change, does not compile with latest, pinned
openssl = "=0.10.66"
