[package]
name = "kasa_cli_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
kasa_core = { path = "../kasa_core" }
rand = "0.8.5"
