[package]
name = "kasa_cli_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }
kasa_core = { path = "../kasa_core" }
kasa_python = { path = "../kasa_python" }
kasa_ai = { path = "../kasa_ai" }
rand = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
