[package]
name = "kasa_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ffmpeg = { git = "https://github.com/zmwangx/rust-ffmpeg", package = "ffmpeg-next", features = [
#    # "static", # TODO only enable in Android and non-linux systems
#] }
base64 = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
dirs = { workspace = true }
fast_image_resize = { workspace = true, features = ["image"] }
human_bytes = { workspace = true } # Don't use SI file size units
humantime = { workspace = true }
imagesize = { workspace = true }
img-parts = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
kamadak-exif = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
mime_guess = { workspace = true }
nom = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "macros",
    "migrate",
] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
toml_edit = { workspace = true, features = ["serde"] }
#wl-clipboard-rs = "0.9.0"
xxhash-rust = { workspace = true, features = ["xxh3"] }
anyhow = { workspace = true }
async-walkdir = { workspace = true }
tokio-stream = { workspace = true }
walkdir = { workspace = true }
kasa_python = { workspace = true }
image = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
rustpython-vm = { workspace = true, features = ["freeze-stdlib"] }
axum-macros = { workspace = true }

# Dependencies for flash thumbnailer support
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", features = [
    "deterministic",
    "default_font",
], optional = true, rev = "a2c3d5e7dd54ff9a50de1f2c6bf9011237c3b73c" }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", features = [
    "clap",
], optional = true, branch = "a2c3d5e7dd54ff9a50de1f2c6bf9011237c3b73c" }


# Dependencies for image tag recognition
ort = { version = "2.0.0-rc.7", features = [
    "rocm",
    "load-dynamic",
], optional = true } # should we build it from source?
ndarray = { version = "0.16.1", optional = true }
csv = { version = "1.3.1", optional = true }


[dependencies.ffmpeg]
git = "https://github.com/zmwangx/rust-ffmpeg"
package = "ffmpeg-next"


[target.'cfg(target_os = "android")'.dependencies.ffmpeg]
git = "https://github.com/zmwangx/rust-ffmpeg"
package = "ffmpeg-next"
features = ["static"]

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }

[build-dependencies]
num_cpus = { workspace = true }
os_info = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tar = { workspace = true }
xz = { workspace = true }


[features]
default = ["swf_thumbnailer", "ai_tagger"]
swf_thumbnailer = ["dep:ruffle_core", "dep:ruffle_render_wgpu"]
ai_tagger = ["dep:ort", "dep:ndarray", "dep:csv"]
#ai_tagger_rocm = ["ai_tagger", "dep:ort/rocm"]
