[package]
name = "kasa_gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.4.2"
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io", "compat"] }
