[package]
name = "kasa_gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
derive_more = { version = "2.1.1", features = ["full"] }
env_logger.workspace = true
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.5.0"
http = "1.4.0"
http-body = "1.0.1"
log.workspace = true
parking_lot = "0.12.5"
regex.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
rustls = "0.23.35"
rustls-platform-verifier = "0.6.2"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io", "compat"] }
url = "2.5.7"

#reqwest_client = { git = "https://github.com/longbridge/gpui-component", tag = "v0.5.0" }
