[package]
name = "kasa_python"
version = "0.1.0"
edition = "2021"


[dependencies]
rustpython-vm = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa", features = [
    "encodings",
    "freeze-stdlib",
    "rustpython-compiler",
    "importlib",

] }
rustpython-stdlib = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa" }
rustpython-pylib = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa", features = [
    #"freeze-stdlib",
] }
rustpython = { git = "https://github.com/kaanyalova/RustPython.git", branch = "kasa", features = [
    "freeze-stdlib",
    "sqlite",
    "ssl-vendor",
] }

anyhow = "1.0.91"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
toml = "0.8.19"
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
log = "0.4.22"
dirs = "5.0.1"
#kasa_core = { workspace = true }

[build-dependencies]
flate2 = "1.0.34"
reqwest = { version = "0.12.8", features = ["blocking", "rustls-tls"] }
tar = "0.4.42"
diffy = "0.4.0"
