[package]
name = "kasa_python"
version = "0.1.0"
edition = "2024"


[dependencies]
rustpython-vm = { workspace = true, features = [
    "encodings",
    "freeze-stdlib",
    "rustpython-compiler",
    "importlib",
] }
rustpython-stdlib = { workspace = true }
rustpython-pylib = { workspace = true, features = [] }
rustpython = { workspace = true, features = [
    "freeze-stdlib",
    "sqlite",
] }


anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
specta = { workspace = true, features = ["derive"] }
log = { workspace = true }
dirs = { workspace = true }
#kasa_core = { workspace = true }

[build-dependencies]
flate2 = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
tar = { workspace = true }
diffy = { workspace = true }
