[package]
name = "kasa_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "kasa_tauri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.6", features = ["protocol-asset", "devtools"] }
tauri-plugin-fs = "2.0.3"
tauri-plugin-log = "2.0.1"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
kasa_core = { path = "../kasa_core" }
#tauri-plugin-theme = "0.4.1"
tauri-plugin-os = "2.0.1"
log = "0.4.22"
dotenvy = "0.15.7"
dirs = "5.0.1"
specta = { version = "=2.0.0-rc.20" }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[profile.dev]
