[package]
name = "kasa_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "kasa_tauri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = ["protocol-asset", "devtools"] }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
kasa_core = { path = "../kasa_core" }
kasa_python = { path = "../kasa_python" }
#tauri-plugin-theme = "0.4.1"
tauri-plugin-os = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
rustpython-vm = { workspace = true, features = ["freeze-stdlib"] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
image = { workspace = true }
opener = "0.7.2"
ashpd = { version = "0.6.8", optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.6.8"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
